--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "poppins", sans-serif;
 }
 #data-container {
   margin: auto;
@@ -21,17 +20,24 @@
   display: grid;
   grid-template-columns: 1fr 0.4fr 1fr;
   margin-bottom: 20px;
+  /* background-color: red; */
 }
 .bar {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .font {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+#font-selector {
+  border: none;
+  outline: none;
+}
+
 .drop-down {
   margin-top: 3px;
   padding: 0 15px;
@@ -46,6 +52,7 @@
 
 body {
   transition: all 0.3s ease-in-out;
+  font-family: serif;
 }
 body.dark {
   background-color: black;
@@ -80,9 +87,12 @@ body.dark .font {
 body.dark .bar {
   color: grey;
 }
+body.dark #font-selector {
+  background-color: black;
+  color: #fff;
+}
 .toggle {
   padding: 0 20px;
-  margin-top: 3px;
   margin-right: 4px;
   position: relative;
   height: 18px;
@@ -178,6 +188,9 @@ body.dark .bar {
 .noun-section ul {
   padding-left: 50px;
 }
+.noun-section ul li {
+  line-height: 25px;
+}
 .noun-section p {
   padding: 20px 0;
   color: grey;
@@ -218,8 +231,20 @@ body.dark .bar {
 .verb-section ul {
   padding-left: 50px;
 }
+.verb-section ul li {
+  line-height: 25px;
+}
 .source {
   padding: 15px 0;
+}
+.source span a {
+  color: grey;
+}
+.respo {
+  margin-top: 20px;
+}
+audio {
+  display: none;
 }
 
 @media screen and (max-width: 281px) {
